Updated the scrollbar to help the computer render it better and added functions to make sure a context is valid and notify the user with all the necessary information to figure it out.

--- a/css/article.css
+++ b/css/article.css
@@ -9,21 +9,26 @@
 	float: left;
 	width: 200px;
 	position: fixed;
-	z-index: 2;
+	z-index: -1;
 	left: 0;
-	padding-top: 20px;
+	padding-top: 30px;
+	padding-bottom: 20px;
 	overflow-y: hidden;
-/*	background: #EFEFEF;*/
-/*	border-width: 1px 1px 1px 0px;
-	border-color: #999999;
-	border-style: solid;*/
-	margin-top: 0px;
+}
+
+#sidenav-activator {
+	float: left;
+	width: 200px;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0px;
+	bottom: 0px;
 }
 
 #sidenav:hover {
 	overflow-y: auto;	
 }
-
 
 /* The navigation menu links */
 #sidenav a {
@@ -34,8 +39,8 @@
 	font-size: 1em;
 	display: block;
 	color: #FF0000;
-	z-index: 1;
-/*	border-width: 0px 0px 1px 0px;
+	z-index: -1000;
+/*	border-width: 0px 0px 0px 1px;
 	border-color: #999999;
 	border-style: solid;*/
 }
@@ -54,7 +59,7 @@
 .article {
 	padding: 26px 0px;
 	position: relative;
-	margin-left: 240px; /* Same as the width of the sidebar */
+	margin-left: 260px; /* Same as the width of the sidebar */
 	padding-bottom: 6em;
 	width: 800px;
 }
